...
                android:contentDescription="@string/desc_share_icon"
                android:contextClickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/share" />

            <ImageButton
                android:id="@+id/image_button_back"
                android:layout_width="@dimen/icon_xs"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/spec_spacing_large"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_back"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_large" />

            <TextView
                android:id="@+id/news_title_tv"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textColor="@color/blue_grey"
                android:textSize="@dimen/font_large"
                app:fontFamily="@font/officina_sans_extra_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timer_tv"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:drawablePadding="@dimen/spacing_xxs"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_xs"
                app:drawableStartCompat="@drawable/icon_calendar"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/news_title_tv" />

            <TextView
                android:id="@+id/fond_name_tv"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textColor="@color/black_60"
                android:textSize="@dimen/font_xs"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
...
                android:contentDescription="@string/desc_nav_icon"
                android:src="@drawable/nav"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/fond_name_tv" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textColor="@color/black_70"
                android:textSize="@dimen/font_small"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
...
                android:src="@drawable/phone"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/address_tv" />


            <TextView
                android:id="@+id/phones_tv"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:textColor="@color/black_70"
                android:textSize="@dimen/font_small"
...
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="SmallSP">

                <TextView
                    android:id="@+id/help_money_btn"
                    style="@style/TextStyle11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_7dp"
...
