<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"

    android:paddingHorizontal="@dimen/spacing_xxl"
    android:paddingTop="@dimen/spacing_xl"
    android:paddingBottom="@dimen/_9dp">

    <TextView
        android:id="@+id/title_text"
        style="@style/TextInfoStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spec_spacing_small"
        android:text="@string/help_dialog_title_text"
        android:textSize="@dimen/font_20" />

    <TextView
        android:id="@+id/first_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spec_spacing_ms"
        android:gravity="center"
        android:text="@string/first_hint_money_dialog_text" />


    <RadioGroup
        android:id="@+id/sum_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sum_100_rb"
            style="@style/UnActiveSumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sum_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/_11dp"
            android:paddingBottom="@dimen/_9dp"
            android:text="@string/money_sum_100"
            android:textColor="@drawable/sum_text_selector" />

        <RadioButton
            android:id="@+id/sum_500_rb"
            style="@style/UnActiveSumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sum_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/_11dp"
            android:paddingBottom="@dimen/_9dp"
            android:text="@string/money_sum_500"
            android:textColor="@drawable/sum_text_selector" />

        <RadioButton
            android:id="@+id/sum_1000_rb"
            style="@style/UnActiveSumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sum_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/_11dp"
            android:paddingBottom="@dimen/_9dp"
            android:text="@string/money_sum_1000"
            android:textColor="@drawable/sum_text_selector" />

        <RadioButton
            android:id="@+id/sum_2000_rb"
            style="@style/UnActiveSumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sum_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/_11dp"
            android:paddingBottom="@dimen/_9dp"
            android:text="@string/money_sum_2000"
            android:textColor="@drawable/sum_text_selector" />
    </RadioGroup>

    <TextView
        android:id="@+id/second_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center"
        android:text="@string/second_hint_money_dialog_text" />

    <EditText
        android:id="@+id/value_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey_two"
        android:gravity="center"
        android:hint="@string/help_dialog_edit_hint"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="7"
        android:textColorHint="@color/light_grey_two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spec_spacing_large"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            style="@style/TextReferenceStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spec_spacing_large"
            android:text="@string/cancel"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/accept_button"
            style="@style/TextReferenceStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/transfer"
            android:textColor="@color/light_grey_two"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

</LinearLayout>